methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:3: error: not found: value versLAvant
if (versLAvant==true){
    ^MethodsArgs:4: error: not found: value nbPas
  for (c<-1 to nbPas){
               ^