methods.args.MethodsArgs.scala.code
def move(nbPas : Int, versLAvant :Boolean)
if (versLAvant==true){
  for (c<-1 to nbPas){
    avance()
  }
}